v<0.1.0>, <20141220> -- Initial release.
v<0.2.0>, <20141220> -- Apply 'less' style output of the events 
v<0.2.1>, <20141220> -- Apply 'less' style output of the channels' list 