@@ -5,7 +5,7 @@ Command Line News
 
 Version
 =======
-	``0.2.1``
+	``0.3.1``
 
 
 Installation
