@@ -1,5 +1,5 @@
 
-VERSION = "0.2.1"
+VERSION = "0.3.1"
 
 CHANNELS = {
     "cnn": {
