@@ -205,6 +205,10 @@
   <dt><a href="index.html#clnews.exception.ShellCommandOutputError">ShellCommandOutputError</a>
   </dt>
 
+      
+  <dt><a href="index.html#clnews.exception.StackEmptyError">StackEmptyError</a>
+  </dt>
+
   </dl></td>
 </tr></table>
 
