@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>CLNews v0.2.1 &mdash; CLNews 0.1.0 documentation</title>
+    <title>CLNews 0.3.1 &mdash; CLNews 0.1.0 documentation</title>
     
     <link rel="stylesheet" href="_static/default.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -44,8 +44,8 @@
         <div class="bodywrapper">
           <div class="body" role="main">
             
-  <div class="section" id="clnews-v0-2-1">
-<h1>CLNews v0.2.1<a class="headerlink" href="#clnews-v0-2-1" title="Permalink to this headline">¶</a></h1>
+  <div class="section" id="clnews-0-3-1">
+<h1>CLNews 0.3.1<a class="headerlink" href="#clnews-0-3-1" title="Permalink to this headline">¶</a></h1>
 <p>Contents:</p>
 <div class="toctree-wrapper compound">
 <ul class="simple">
@@ -212,6 +212,12 @@ initialization</p>
 <dd><p>Is raised when output is not of the expected type.</p>
 </dd></dl>
 
+<dl class="exception">
+<dt id="clnews.exception.StackEmptyError">
+<em class="property">exception </em><code class="descclassname">clnews.exception.</code><code class="descname">StackEmptyError</code><a class="headerlink" href="#clnews.exception.StackEmptyError" title="Permalink to this definition">¶</a></dt>
+<dd><p>Is raised when a stack is empty</p>
+</dd></dl>
+
 </div>
 <div class="section" id="indices-and-tables">
 <h1>Indices and tables<a class="headerlink" href="#indices-and-tables" title="Permalink to this headline">¶</a></h1>
@@ -230,7 +236,7 @@ initialization</p>
         <div class="sphinxsidebarwrapper">
   <h3><a href="#">Table Of Contents</a></h3>
   <ul>
-<li><a class="reference internal" href="#">CLNews v0.2.1</a></li>
+<li><a class="reference internal" href="#">CLNews 0.3.1</a></li>
 <li><a class="reference internal" href="#module-clnews.shell">shell</a></li>
 <li><a class="reference internal" href="#module-clnews.news">news</a></li>
 <li><a class="reference internal" href="#module-clnews.exception">exceptions</a></li>
